[tool.poetry]
name = "csk-modulation"
version = "0.1.0"
description = ""
authors = ["Никита <dev.n.grishin@gmail.com>"]
readme = "README.md"
packages = [{include = "csk_modulation"}]

[tool.poetry.dependencies]
python = "^3.11"
bitarray = "^2.7.0"
numpy = "^1.24.2"
matplotlib = "^3.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
