[tool.poetry]
name = "csk-modulation"
version = "0.1.0"
description = ""
authors = ["Никита <dev.n.grishin@gmail.com>"]
readme = "README.md"
packages = [{include = "csk_modulation"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.2"
cufflinks = "^0.17.3"
plotly = "^5.13.0"
nbformat = "^5.7.3"
dash = "^2.8.1"
diskcache = "^5.4.0"
click = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
